force-app/main/default/objects/MC4SF__MC_Merge_Variable__c/fields/MC4SF__Choices__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Choices__c</fullName>
    <inlineHelpText>For radio and dropdown field types, an array of the options available</inlineHelpText>
    <label>Choices</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>