force-app/main/default/objects/MC4SF__MC_Merge_Variable__c/fields/MC4SF__Contact_Field_Mapping__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Contact_Field_Mapping__c</fullName>
    <label>Contact Field Mapping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>