force-app/main/default/objects/MC4SF__MC_Merge_Variable__c/fields/MC4SF__Default_Value__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Default_Value__c</fullName>
    <inlineHelpText>The default value the list owner has set for this field</inlineHelpText>
    <label>Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>