force-app/main/default/objects/MC4SF__MC_Merge_Variable__c/fields/MC4SF__Field_Type__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Field_Type__c</fullName>
    <inlineHelpText>The &quot;data type&quot; of this merge var.</inlineHelpText>
    <label>Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>email</fullName>
            </value>
            <value>
                <fullName>text</fullName>
            </value>
            <value>
                <fullName>number</fullName>
            </value>
            <value>
                <fullName>radio</fullName>
            </value>
            <value>
                <fullName>dropdown</fullName>
            </value>
            <value>
                <fullName>date</fullName>
            </value>
            <value>
                <fullName>address</fullName>
            </value>
            <value>
                <fullName>phone</fullName>
            </value>
            <value>
                <fullName>url</fullName>
            </value>
            <value>
                <fullName>imageurl</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>