force-app/main/default/objects/MC4SF__MC_Merge_Variable__c/fields/MC4SF__MailChimp_ID__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__MailChimp_ID__c</fullName>
    <label>MailChimp ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>