force-app/main/default/objects/MC4SF__MC_Merge_Variable__c/fields/MC4SF__Order__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Order__c</fullName>
    <inlineHelpText>The order the list owner has set this field to display in</inlineHelpText>
    <label>Order</label>
    <length>10</length>
    <type>Text</type>
</CustomField>