force-app/main/default/objects/MC4SF__MC_Merge_Variable__c/fields/MC4SF__Required__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>