force-app/main/default/objects/MC4SF__MC_Merge_Variable__c/fields/MC4SF__Show__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Show__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Whether the list owner has this field displayed on their list dashboard</inlineHelpText>
    <label>Show</label>
    <type>Checkbox</type>
</CustomField>