force-app/main/default/objects/MC4SF__MC_Merge_Variable__c/fields/MC4SF__Size__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Size__c</fullName>
    <inlineHelpText>The width of the field to be used</inlineHelpText>
    <label>Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>