force-app/main/default/objects/MC4SF__MC_Merge_Variable__c/fields/MC4SF__Tag__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Tag__c</fullName>
    <inlineHelpText>The merge tag that&apos;s used for forms and MailChimp API calls.</inlineHelpText>
    <label>Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>